<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="310dp"
    android:orientation="vertical" >

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="left">
    <ImageView
      android:src="@drawable/ic_launcher"
      android:layout_width="wrap_content"
      android:layout_gravity="center"
      android:scaleType="center"
      android:layout_height="wrap_content"
      android:layout_margin="8dp" />
    <TextView
      android:layout_width="fill_parent"
      android:gravity="center_vertical"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:maxLines="2"
      android:layout_height="wrap_content"
      android:text="@string/tracking_prompt_title"
      android:layout_margin="8dp"
      />
  </LinearLayout>  
  <include
    layout="@layout/popup_divider" />
    <TextView
      android:text="@string/tracking_prompt_text"
      android:textAppearance="?android:attr/textAppearanceMedium"
      android:textColor="?android:attr/textColorPrimaryDisableOnly"
      android:layout_height="wrap_content"
      android:layout_width="fill_parent"
      android:gravity="center"
      android:paddingRight="10dp"
      android:paddingLeft="10dp" 
      />
  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="2dp"
    android:background="@android:color/darker_gray">
    <Button
      android:id="@+id/TrackingYesBtn"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/tracking_btn_yes"
      android:layout_width="fill_parent" />
    <Button
      android:id="@+id/TrackingNoBtn"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/tracking_btn_no"
      android:layout_width="fill_parent" />
  </LinearLayout>
  <CheckBox
    android:text="@string/remember_text"
    android:id="@+id/TrackingRememberBox"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    />
</LinearLayout>